yaml_configs/nextcloud/01-cloudflare-tunnel.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-nextcloud
  namespace: nextcloud
spec:
  replicas: 0
  selector:
    matchLabels:
      app: cloudflare-nextcloud
  template:
    metadata:
      labels:
        app: cloudflare-nextcloud
        name: cloudflare-nextcloud
    spec:
      containers:
        - name: cloudflare-nextcloud
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          args:
            - "tunnel"
            - "--no-autoupdate"
            - "run"
            - "--token"
            - "$(CLOUDFLARE_TOKEN)"  # Use environment variable
