yaml_configs/nextcloud/05-nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "b2:5a:1c:00:37:f4",
            "ips": ["192.168.1.191/24"]
          }]
    spec:
      containers:
        - image: lscr.io/linuxserver/nextcloud:latest
          name: nextcloud
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: nextcloud-data
              subPath: data
            - mountPath: /config
              name: nextcloud-config
              subPath: config
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-pvc
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config-pvc
