yaml_configs/nextcloud/7-nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:fpm
          name: nextcloud 
          ports:
            - containerPort: 2000
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-storage
              subPath: data
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim: 
          claimName: nextcloud-data-pvc
