yaml_configs/nextcloud/02-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:alpine
          name: redis
          ports:
            - containerPort: 6379
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
