yaml_configs/nextcloud/11-imaginary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imaginary
  namespace: nextcloud
  labels:
    app: imaginary
spec:
  selector:
    matchLabels:
      app: imaginary
  replicas: 1
  template:
    metadata:
      labels:
        app: imaginary
    spec:
      containers:
        - image: h2non/imaginary
          name: imaginary
          ports:
            - containerPort: 8088
---

apiVersion: v1
kind: Service
metadata:
  name: imaginary
  namespace: nextcloud
  labels:
    app: imaginary
spec:
  ports:
    - port: 8088
  selector:
    app: imaginary
