yaml_configs/nextcloud/00-nextcloud-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "b2:5a:1c:00:37:f4",
            "ips": ["192.168.1.191/24"]
          }]
    spec:
      containers:
        - image: lscr.io/linuxserver/nextcloud:latest
          name: nextcloud
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: nextcloud-data
              subPath: data
            - mountPath: /config
              name: nextcloud-config
              subPath: config
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data-pvc
      - name: nextcloud-config
        persistentVolumeClaim:
          claimName: nextcloud-config-pvc



---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  type: LoadBalancer
  ports:
  - name: nextcloud
    port: 4000
    targetPort: 80
  selector:
    app: nextcloud


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
    #traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth-proxy@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
  labels:
    app: nextcloud
spec:
  rules:
  - host: cloud.jsuri.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nextcloud
            port:
              number: 4000
  tls:
  - hosts:
    - cloud.jsuri.com # Change by your domain
    secretName: nextcloud-jsuri-com-tls
